# Website

./: .breakpoints  .gitignore  .replit  main.py  pyproject.toml
static/: 288_basic_folium_map.html  accounts.json  bootstrap.min.css  robots.txt  scene.js  script.js  style.css
static/hosting/: schoolPull.js
static/js/: astar.js  collatz.js  cookie_popup.js  iocircle.js  objects.mjs  render.mjs  script.js  table.js  things.mjs  web.js
templates/: 3d.html  404.html  account.html  amino.html  astar.html  base.html  boids.html  cookie_desc.html  cube.html  debug.html  golf.html  hilbert.html  home.html  iocircle.html  iso.html  isogame.html  login.html  logout.html  me.html  metaballs.html  noiocircle.html  periodic.html  projects.html  prpo.html  robots.txt  signup.html  sitemap.xml  tos.html  triangle.html  web.html  what.html
