[tool.poetry]
name = "repl_python3_db"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
replit = "^3.2.4"
Flask = "^2.0.1"
Flask-Sitemap = "^0.4.0"
cryptography = "^36.0.2"
Flask-FlatPages = "^0.8.1"
bs4 = "^0.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
